# transaction-intelligence-lakehouse

./: .gitignore  BUILD_SPEC.md  README.md  databricks.yml  pyproject.toml
.github/workflows/: .gitkeep  ci.yml  deploy.yml
ai/: README.md  nl_to_sql_agent.py  requirements.txt  schema_context.py
dashboards/: 01_kpi_overview.sql  02_flagged_rate_over_time.sql  03_signal_breakdown.sql  04_fraud_score_distribution.sql  05_top_risky_merchants.sql  06_top_flagged_customers.sql  07_daily_spend_trend.sql  08_detection_validation.sql
dbt/: .user.yml  dbt_project.yml  profiles.yml.example
dbt/macros/: generate_database_name.sql  generate_schema_name.sql
dbt/models/gold/: .gitkeep  _gold.yml  customer_spend_daily.sql  dim_customer.sql  dim_merchant.sql  fct_transaction.sql  fraud_signals.sql  merchant_risk_daily.sql
dbt/models/silver/: .gitkeep  _silver.yml  silver_transactions.sql  stg_customers.sql  stg_merchants.sql  stg_transactions.sql
dbt/tests/: .gitkeep  assert_fraud_recall_sane.sql
docs/: architecture.md  dashboard.md  genie.md
generator/: __init__.py  config.py  generate_transactions.py  reference_data.py
infra/terraform/: .gitkeep  README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
ingestion/: .gitkeep  __init__.py  bronze_autoloader.py  load_reference.py
resources/: .gitkeep  transaction_pipeline.job.yml
scripts/: verify.ps1
tests/: .gitkeep  test_generator.py  test_ingestion.py  test_nl2sql_guardrails.py
